--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,7 +93,7 @@ footer {
     background-color: #4aaaa5;
     color: white;
     height: 25px;
-    width: 350px;
+    width: 100%;
     font-size: 16px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     text-align: center;
@@ -103,4 +103,12 @@ footer {
     border: none;
     padding: 0px;
     margin-bottom: 20px;
+    width: 100%;
+}
+
+.portfolio-item {
+    padding: 0px;
+    margin-left: 10px;
+    margin-right: 10px;
+
 }
